tests/baselines/reference/ES5For-of31(target=es5).errors.txt
ES5For-of31.ts(3,8): error TS2339: Property 'a' does not exist on type 'undefined'.
ES5For-of31.ts(3,18): error TS2339: Property 'b' does not exist on type 'undefined'.


==== ES5For-of31.ts (2 errors) ====
    var a: string, b: number;
    
    for ({ a: b = 1, b: a = ""} of []) {
           ~
!!! error TS2339: Property 'a' does not exist on type 'undefined'.
                     ~
!!! error TS2339: Property 'b' does not exist on type 'undefined'.
        a;
        b;
    }